[package]
name = "doordb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
doors = { path = "../rusty-doors/doors" }
libc = "0.2.158"
serde = { version = "1.0.210", features = ["derive"] }
serde_cbor = "0.11.2"
serde_derive = "1.0.210"
